# TAAG_Server

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
includes/: actor.hpp  actor_manager.hpp  actor_map.hpp  context.hpp  main_widget.hpp  network_override.hpp  network_widget.hpp  player_manager.hpp  serializable_object.hpp  world.hpp  world_manager.hpp
includes/network/: network_override.hpp  network_widget.hpp  serializable_object.hpp
includes/structure/: actor.hpp  actor_map.hpp  context.hpp  world.hpp
includes/widget/: actor_manager.hpp  player_manager.hpp  world_manager.hpp
srcs/: actor_manager.cpp  main.cpp  main_widget.cpp  network_override.cpp  network_widget.cpp  player_manager.cpp  world_manager.cpp
srcs/actor/: actor.cpp  actor_map.cpp
srcs/network/: network_override.cpp  network_widget.cpp
srcs/structure/actor/: actor.cpp  actor_map.cpp
srcs/structure/world/: chunk.cpp  node_map.cpp  tilemap.cpp
srcs/widget/: actor_manager.cpp  player_manager.cpp  world_manager.cpp
srcs/world/: chunk.cpp  node_map.cpp  tilemap.cpp
